Рабочий CountriesService и CountriesRestController, произвел корректировку UserService и UserRestController V2