@@ -1,20 +1,16 @@
 package com.kovtunov.personservice.rest;
 
 import com.kovtunov.personservice.dto.AllInformationDTO;
+import com.kovtunov.personservice.dto.ErrorDto;
 import com.kovtunov.personservice.dto.UserDTO;
-import com.kovtunov.personservice.entity.Address;
-import com.kovtunov.personservice.entity.Countries;
-import com.kovtunov.personservice.entity.Individuals;
 import com.kovtunov.personservice.entity.User;
-import com.kovtunov.personservice.mapper.UserMapper;
-import com.kovtunov.personservice.repository.AddressRepository;
-import com.kovtunov.personservice.repository.IndividualsRepository;
-import com.kovtunov.personservice.service.CountriesService;
+import com.kovtunov.personservice.exception.UserNotFoundException;
+import com.kovtunov.personservice.exception.UserWithDuplicateEmailException;
+import com.kovtunov.personservice.mapper.CustomMapper;
 import com.kovtunov.personservice.service.UserService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -26,37 +22,70 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @RequiredArgsConstructor
 @RequestMapping("/api/users")
 public class UserRestController {
 
-    private final UserMapper userMapper;
+    private final CustomMapper customMapper;
     private final UserService userService;
 
     @PostMapping("/full")
-    public void allInformationUser(@RequestBody AllInformationDTO information) {
-       userService.createFullUser(information);
+    public ResponseEntity<?> allInformationUser(@RequestBody AllInformationDTO information) {
+        log.info("In all information user {}", information);
+        try {
+            return ResponseEntity.ok(userService.createFullUser(information));
+        } catch (UserWithDuplicateEmailException e) {
+            return ResponseEntity.badRequest()
+                    .body(ErrorDto.builder()
+                            .status(400)
+                            .message(e.getMessage())
+                            .build());
+        }
+
     }
 
-//    @PostMapping("/create-user")
-//    @Transactional(rollbackFor = Exception.class)
-//    public String createUser(@RequestBody User user) {
-//        String userLoad = userService.createUser(user);
-//        return "create new user " + userLoad;
-//    }
-
+    @PostMapping("/create-user")
+    public ResponseEntity<?> create(@RequestBody User user) {
+        log.info("In create-user {}", user);
+        try {
+            User createUser = userService.createOnlyUser(user);
+            UserDTO result = customMapper.toDtoUser(createUser);
+            return ResponseEntity.ok(result);
+        } catch (UserWithDuplicateEmailException e) {
+            return ResponseEntity.badRequest()
+                    .body(ErrorDto.builder()
+                            .status(400)
+                            .message(e.getMessage())
+                            .build());
+        }
+    }
 
     @GetMapping("/{uuid}")
-    public UserDTO getUser(@PathVariable UUID uuid) {
-        return userMapper.toDtoUser(userService.getUserByUUID(uuid));
+    public ResponseEntity<?> getUserById(@PathVariable UUID uuid) {
+        log.info("In getUser {}", uuid);
+        try {
+            User user = userService.getUserByUUID(uuid);
+            UserDTO result = customMapper.toDtoUser(user);
+            return ResponseEntity.ok(result);
+        } catch (UserNotFoundException e) {
+            return ResponseEntity
+                    .status(404)
+                    .body(ErrorDto.builder()
+                            .message(e.getMessage())
+                            .build());
+        }
+
     }
+
     @GetMapping("/all")
     public ResponseEntity<List<UserDTO>> getAllUsers() {
-        List<User>users = userService.getAllUsers();
-        List<UserDTO>dto = users.stream()
-                .map(userMapper::toDtoUser)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok().body(dto);
+        log.info("In getAllUsers");
+        return ResponseEntity.ok()
+                .body(userService.getAllUsers()
+                        .stream()
+                        .map(customMapper::toDtoUser)
+                        .toList());
     }
 }
